Creation of the structure for the activities of Week 02

--- a/week02/index.html
+++ b/week02/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Elisangela Alves's Assignments</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
+
 </head>
+
 <body>
-    <h1>WDD 330 Assignments</h1>
-	<h2>This will be week 02</h2>
-    <p>Week 02</p>
-	
-	<a href="../index.html">Home page</a>
+    <div id="main">
+        <div id="header">
+            <div id="logo_text">
+                <h1>WDD 330 Assignments</h1>
+                <h2>This will be week 02</h2>
+            </div>
+        </div>
+        <div id="site_content">
+            <h3>Week 02</h3>
+
+            <hr>
+            <div id="content">
+               
+            </div>
+            <div id="content">
+                <div id="menu">
+                    <ul>
+                        <li><a href="W02TeamActivity.html">W02 Team Activity</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <hr>
+        <a href="../index.html">Home page</a>
+        <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
+    </div>
 </body>
+
 </html>
