--- a/week02/stretchGoals.html
+++ b/week02/stretchGoals.html
@@ -15,12 +15,12 @@
     <div id="main">
         <div id="header">
             <div id="logo_text">
-                <h1>WDD 330 Assignments</h1>
-                <h2>This will be week 06</h2>
+                <h1>Stretch Goals</h1>
+                
             </div>
         </div>
         <div id="site_content">
-            <h3>Week 06</h3>
+            <h3></h3>
 
             <hr>
             <div id="content">
@@ -30,7 +30,7 @@
     </div>
     <div id="footer">
         <hr>
-        <a href="../index.html">Home page</a>
+        <a href="W02TeamActivity.html">Home page</a>
         <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
     </div>
 </body>
