--- a/index.html
+++ b/index.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Elisangela Alves's Assignments</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
-<body>
-    <h1>WDD 330 portfolio</h1>
-    <ul>
-	<li><a href="week01/index.html">Week 01</a></li>
-    <li><a href="week02/index.html">Week 02</a></li>
-    <li><a href="week03/index.html">Week 03</a></li>
-    <li><a href="week04/index.html">Week 04</a></li>
-    <li><a href="week05/index.html">Week 05</a></li>
-    <li><a href="week06/index.html">Week 06</a></li>
-    <li><a href="week07/index.html">Week 07</a></li>
-    <li><a href="week08/index.html">Week 08</a></li>
-    <li><a href="week09/index.html">Week 09</a></li>
-    <li><a href="week10/index.html">Week 10</a></li>
-    <li><a href="week11/index.html">Week 11</a></li>
-    <li><a href="week12/index.html">Week 12</a></li>
-    <li><a href="week13/index.html">Week 13</a></li>
-    </ul>
 
+<body>
+    <div id="main">
+        <div id="header">
+            <div id="logo_text">
+                <h1>WDD 330 portfolio</h1>
+            </div>
+        </div>
+        <div id="site_content">
+            <span class="left">
+                <img src="image/lis.jpeg" alt="myself" class="img-fluid img-circle">
+            </span>
+            <div class="col-md-9 mt-sm-20 left-align-p">
+                <h3>Elisangela de Souza Alves</h3>
+                <p>BS in Software Engineering </p>
+
+            </div>
+            <hr>
+            <div id="content">
+                <div id="menu">
+                    <ul>
+                        <li><a href="week01/index.html">Week 01</a></li>
+                        <li><a href="week02/index.html">Week 02</a></li>
+                        <li><a href="week03/index.html">Week 03</a></li>
+                        <li><a href="week04/index.html">Week 04</a></li>
+                        <li><a href="week05/index.html">Week 05</a></li>
+                        <li><a href="week06/index.html">Week 06</a></li>
+                        <li><a href="week07/index.html">Week 07</a></li>
+                        <li><a href="week08/index.html">Week 08</a></li>
+                        <li><a href="week09/index.html">Week 09</a></li>
+                        <li><a href="week10/index.html">Week 10</a></li>
+                        <li><a href="week11/index.html">Week 11</a></li>
+                        <li><a href="week12/index.html">Week 12</a></li>
+                        <li><a href="week13/index.html">Week 13</a></li>
+                    </ul>
+                </div>
+            </div>
+          
+        </div>
+        
+        <div id="footer">
+            <hr>
+            &copy; 2020 | Portfolio | Lis Alves
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
