--- a/week02/W02TeamActivity.html
+++ b/week02/W02TeamActivity.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Elisangela Alves's Assignments</title>
+    <title>W02 Team Activity</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!-- main css -->
@@ -15,22 +15,24 @@
     <div id="main">
         <div id="header">
             <div id="logo_text">
-                <h1>WDD 330 Assignments</h1>
-                <h2>This will be week 06</h2>
+                <h1>Ponder: Team Activity</h1>
+
             </div>
         </div>
         <div id="site_content">
-            <h3>Week 06</h3>
-
-            <hr>
             <div id="content">
-               
+                <div id="menu">
+                    <ul>
+                        <li><a href="coreRequirements.html">Core Requirements</a></li>
+                        <li><a href="stretchGoals.html">Stretch Goals</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
     <div id="footer">
         <hr>
-        <a href="../index.html">Home page</a>
+        <a href="index.html">Week 02</a>
         <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
     </div>
 </body>
