--- a/week02/coreRequirements.html
+++ b/week02/coreRequirements.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Elisangela Alves's Assignments</title>
+    <title>Core Requirements</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!-- main css -->
@@ -15,12 +15,11 @@
     <div id="main">
         <div id="header">
             <div id="logo_text">
-                <h1>WDD 330 Assignments</h1>
-                <h2>This will be week 06</h2>
+                <h1>Core Requirements</h1>
             </div>
         </div>
         <div id="site_content">
-            <h3>Week 06</h3>
+            <h3></h3>
 
             <hr>
             <div id="content">
@@ -30,7 +29,7 @@
     </div>
     <div id="footer">
         <hr>
-        <a href="../index.html">Home page</a>
+        <a href="W02TeamActivity.html">Home page</a>
         <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
     </div>
 </body>
