--- a/week10/index.html
+++ b/week10/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Elisangela Alves's Assignments</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
+
 </head>
+
 <body>
-    <h1>WDD 330 Assignments</h1>
-	<h2>This will be week 10</h2>
-    <p>Week 10</p>
-	
-	<a href="../index.html">Home page</a>
+    <div id="main">
+        <div id="header">
+            <div id="logo_text">
+                <h1>WDD 330 Assignments</h1>
+                <h2>This will be week 10</h2>
+            </div>
+        </div>
+        <div id="site_content">
+            <h3>Week 10</h3>
+
+            <hr>
+            <div id="content">
+               
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <hr>
+        <a href="../index.html">Home page</a>
+        <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
+    </div>
 </body>
+
 </html>
