W02 Readings Notes for week 02

--- a/week02/index.html
+++ b/week02/index.html
@@ -24,11 +24,12 @@
 
             <hr>
             <div id="content">
-               
+
             </div>
             <div id="content">
                 <div id="menu">
                     <ul>
+                        <li><a href="notes.html">Notes</a></li>
                         <li><a href="W02TeamActivity.html">W02 Team Activity</a></li>
                     </ul>
                 </div>
