--- a/week03/index.html
+++ b/week03/index.html
@@ -24,7 +24,11 @@
 
             <hr>
             <div id="content">
-               
+                <div id="menu">
+                    <ul>
+                        <li><a href="notes.html">Notes</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
