--- a/week08/notes.html
+++ b/week08/notes.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Elisangela Alves's Assignments</title>
+    <title>W08 - Notes</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!-- main css -->
@@ -15,12 +15,13 @@
     <div id="main">
         <div id="header">
             <div id="logo_text">
-                <h1>Stretch Goals</h1>
+                <h1>Notes</h1>
+                <h2>Week 08</h2>
 
             </div>
         </div>
         <div id="site_content">
-            <h3></h3>
+            <h2></h2>
 
             <hr>
             <div id="content">
@@ -30,7 +31,7 @@
     </div>
     <div id="footer">
         <hr>
-        <a href="W02TeamActivity.html">Home page</a>
+        <a href="index.html">Week 08</a>
         <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
     </div>
 </body>
