--- a/week03/w03TeamActivity.html
+++ b/week03/w03TeamActivity.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Elisangela Alves's Assignments</title>
+    <title>W03 Team Activity</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!-- main css -->
@@ -15,27 +15,23 @@
     <div id="main">
         <div id="header">
             <div id="logo_text">
-                <h1>WDD 330 Assignments</h1>
-                <h2>This will be week 03</h2>
+                <h1>Ponder: Team Activity</h1>
+                <h2>Week 03</h2>
+
             </div>
         </div>
         <div id="site_content">
-            <h3>Week 03</h3>
+            <h2></h2>
 
             <hr>
             <div id="content">
-                <div id="menu">
-                    <ul>
-                        <li><a href="notes.html">Notes</a></li>
-                        <li><a href="W03TeamActivity.html">W03 Team Activity</a></li>
-                    </ul>
-                </div>
+
             </div>
         </div>
     </div>
     <div id="footer">
         <hr>
-        <a href="../index.html">Home page</a>
+        <a href="index.html">Week 03</a>
         <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
     </div>
 </body>
