Ponder: Team Activity

--- a/week03/w03TeamActivity.html
+++ b/week03/w03TeamActivity.html
@@ -22,7 +22,12 @@
         </div>
         <div id="site_content">
             <h2></h2>
-
+            <div id="menu">
+                <ul>
+                    <li><a href="index-START.html">Core Requirements</a></li>
+                    <li><a href="index-START2.html">Stretch Goals</a></li>
+                </ul>
+            </div>
             <hr>
             <div id="content">
 
