--- a/week03/index.html
+++ b/week03/index.html
@@ -27,7 +27,7 @@
                 <div id="menu">
                     <ul>
                         <li><a href="notes.html">Notes</a></li>
-                        <li><a href="W03TeamActivity.html">W03 Team Activity</a></li>
+                        <li><a href="w03TeamActivity.html">W03 Team Activity</a></li>
                     </ul>
                 </div>
             </div>
