--- a/week04/index.html
+++ b/week04/index.html
@@ -27,6 +27,7 @@
                 <div id="menu">
                     <ul>
                         <li><a href="notes.html">Notes</a></li>
+                        <li><a href="w04TeamActivity.html">W04 Team Activity</a></li>
                     </ul>
                 </div>
             </div>
