--- a/week02/W02TeamActivity.html
+++ b/week02/W02TeamActivity.html
@@ -21,14 +21,14 @@
         </div>
         <div id="site_content">
             <div id="content">
-                <div class="footerButton">
+                <div class="centralizedItems">
                     <input type="text" name="text" id="text" placeholder="Write something!">
 
                     <input type="text" name="number1" id="number1" placeholder="Enter a whole number">
                     <input type="text" name="number2" id="number2" placeholder="Enter a whole number">
                 </div>
                 <section>
-                    <div class="footerButton">
+                    <div class="centralizedItems">
                         <input type="submit" name="displayText" onclick="displayText()"
                             value="What did you say to me!?" />
                         <input type="submit" name="GaussSum" onclick="displayGaussSum()" value="Sum all numbers to n" />
