--- a/week04/w04TeamActivity.html
+++ b/week04/w04TeamActivity.html
@@ -42,7 +42,7 @@
                         <div class="square" id="bottomMiddle"></div>
                         <div class="square" id="bottomRight"></div>
                     </div>
-                    <div class="footerButton">
+                    <div class="centralizedItems">
                         <input type="submit" onclick="resetBoard()" Value="reset" />
                     </div>
                 </div>
