--- a/week05/TeamActivity/index.html
+++ b/week05/TeamActivity/index.html
@@ -4,10 +4,10 @@
 <head>
     <title>Elisangela Alves's Assignments</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/bootstrap.css">
     <!-- main css -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/responsive.css">
 
 </head>
 
@@ -24,18 +24,16 @@
 
             <hr>
             <div id="content">
-                <div id="menu">
-                    <ul>
-                        <li><a href="notes.html">Notes</a></li>
-                        <li><a href="TeamActivity/index.html">W05 Team Activity</a></li>
-                    </ul>
-                </div>
+                <main>
+                    <h1>Great Hikes</h1>
+                    <ul id="hikeList" ></ul>
+                </main>
             </div>
         </div>
     </div>
     <div id="footer">
         <hr>
-        <a href="../index.html">Home page</a>
+        <a href="../index.html">Week05</a>
         <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
     </div>
 </body>
