--- a/week05/TeamActivity/index.html
+++ b/week05/TeamActivity/index.html
@@ -2,40 +2,41 @@
 <html>
 
 <head>
-    <title>Elisangela Alves's Assignments</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../../css/bootstrap.css">
-    <!-- main css -->
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/responsive.css">
+  <title>Elisangela Alves's Assignments</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="../../css/bootstrap.css">
+  <!-- main css -->
+  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/responsive.css">
+  <link rel="stylesheet" href="hikes.css">
 
 </head>
 
 <body>
-    <div id="main">
-        <div id="header">
-            <div id="logo_text">
-                <h1>WDD 330 Assignments</h1>
-                <h2>This will be week 05</h2>
-            </div>
-        </div>
-        <div id="site_content">
-            <h3>Week 05</h3>
+  <div id="main">
+    <div id="header">
+      <div id="logo_text">
+        <h1>Ponder: Team Activity</h1>
+        <h2>Week 05</h2>
+      </div>
+    </div>
+    <div id="site_content">
+      <h1>Great hikes</h1>
 
-            <hr>
-            <div id="content">
-                <main>
-                    <h1>Great Hikes</h1>
-                    <ul id="hikeList" ></ul>
-                </main>
-            </div>
-        </div>
+      <hr>
+      <div id="content" >
+        <main>
+          <ul id="hikes" class="hikeStyles"></ul>
+        </main>
+        <script src="main.js" type="module"></script>
+      </div>
     </div>
-    <div id="footer">
-        <hr>
-        <a href="../index.html">Week05</a>
-        <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
-    </div>
+  </div>
+  <div id="footer">
+    <hr>
+    <a href="../index.html">Home page</a>
+    <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
+  </div>
 </body>
 
 </html>
