--- a/week05/TeamActivity/index.html
+++ b/week05/TeamActivity/index.html
@@ -34,7 +34,7 @@
   </div>
   <div id="footer">
     <hr>
-    <a href="../index.html">Home page</a>
+    <a href="../index.html">Week 05</a>
     <p>Copyright&copy; 2020 | Portfolio | Lis Alves</p>
   </div>
 </body>
