--- a/week06/index.html
+++ b/week06/index.html
@@ -27,6 +27,7 @@
                 <div id="menu">
                     <ul>
                         <li><a href="notes.html">Notes</a></li>
+                        <li><a href="ToDo/todo.html">ToDo Challenge</a></li>
                     </ul>
                 </div>
             </div>
