--- a/week06/ToDo/todo.html
+++ b/week06/ToDo/todo.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="centralizedItems">
                         <input id="addToDo" type="text">
-                        <input type="submit" id="add" type="button" value="Add" />
+                        <input type="submit" id="add" value="Add" />
                     </div>
                     <script src="main.js" type="module"></script>
                 </div>
