--- a/week06/ToDo/todo.html
+++ b/week06/ToDo/todo.html
@@ -22,12 +22,13 @@
                 <hr>
                 <div id="content">
                     <ul id="toDoList"></ul>
-                    <div id="filters">
+                    <div id="filters" class="centralizedItems">
                         <span id="filterActions">
                             <span id="numTasksLeft">Tasks left:</span>
-                            <input type="submit" id="all" value="All" />
-                            <input type="submit" id="active" value="Active" />
-                            <input type="submit" id="completed" value="Completed" />
+                
+                            <button id="all" class="filter">All</button>
+                            <button id="active" class="filter">Active</button>
+                            <button id="completed" class="filter">Completed</button>
                         </span>
                     </div>
                     <div class="centralizedItems">
