--- a/week06/ToDo/todo.html
+++ b/week06/ToDo/todo.html
@@ -25,10 +25,10 @@
                     <div id="filters" class="centralizedItems">
                         <span id="filterActions">
                             <span id="numTasksLeft">Tasks left:</span>
-                
-                            <button id="all" class="filter">All</button>
-                            <button id="active" class="filter">Active</button>
-                            <button id="completed" class="filter">Completed</button>
+
+                            <button id="all">All</button>
+                            <button id="active">Active</button>
+                            <button id="completed">Completed</button>
                         </span>
                     </div>
                     <div class="centralizedItems">
