--- a/week06/ToDo/todo.html
+++ b/week06/ToDo/todo.html
@@ -26,9 +26,9 @@
                         <span id="filterActions">
                             <span id="numTasksLeft">Tasks left:</span>
 
-                            <button id="all">All</button>
-                            <button id="active">Active</button>
-                            <button id="completed">Completed</button>
+                            <input type="submit" id="all" class="filter" value="All" />
+                            <input type="submit" id="active" class="filter" value="Active">
+                            <input type="submit" id="completed" class="filter" value="Completed" />
                         </span>
                     </div>
                     <div class="centralizedItems">
