--- a/week06/ToDo/todo.html
+++ b/week06/ToDo/todo.html
@@ -22,6 +22,7 @@
                 <hr>
                 <div id="content">
                     <ul id="toDoList"></ul>
+                    <span id="nda"></span>
                     <div id="filters" class="centralizedItems">
                         <span id="filterActions">
                             <span id="numTasksLeft">Tasks left:</span>
